--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://gowthamk0411_db_user:9841660195@cluster0.xaitxfi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET="Gowtham@!@#$%^&*123"
+MONGO_URI=mongodb+srv://gowthamk0411_db_user:9841660195@cluster0.xaitxfi.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=Gowtham@!@#$%^&*123
