--- a/Frontend/app/package.json
+++ b/Frontend/app/package.json
@@ -1,13 +1,15 @@
 {
   "name": "app",
-  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
     "qrcode": "^1.5.4",
